--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,13 +5,13 @@
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
 tasks:
-  - init: 
+  - init: |
       echo "Creating .env file..."
       touch .env
       echo "Please enter your API key:"
       read API_KEY
       echo "GOOGLE_API_KEY=$API_KEY" >> .env
       pip install -r requirements.txt
-    command: streamlit run app.py
+    command: streamlit run interface.py
 
 
