issue with llm solved

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,6 +12,6 @@ tasks:
       read API_KEY
       echo "GOOGLE_API_KEY=$API_KEY" >> .env
       pip install -r requirements.txt
-    command: streamlit run interface.py
+    command: streamlit run app.py
 
 
